--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bluise",
-  "shortName": "Bluise",
-  "description": "A Nuxt.js & Netlify CMS boilerplate.",
+  "name": "BVH Wood Creations",
+  "shortName": "BVH Wood Creations",
+  "description": "BVH Wood Creations - High end wood creations, featuring hand-made pens",
   "themeColor": "#0b3765",
   "backgroundColor": "#ffffff",
   "lang": "en"
