Add shop and about

--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -12,7 +12,7 @@ public_folder: '/images/uploads'
 
 # Collections https://www.netlifycms.org/docs/configuration-options/#collections
 collections:
-  - label: Settings
+  - label: General Settings
     name: settings
     files:
       - label: General
@@ -31,7 +31,7 @@ collections:
       - label: Manifest
         name: manifest
         format: json
-        file: 'app/content/settings/manifest.json'
+        file: 'app/content/shop.json'
         fields:
           - { label: Name, name: name, widget: string }
           - { label: 'Short name', name: shortName, widget: string }
@@ -40,17 +40,35 @@ collections:
           - { label: 'Background color', name: backgroundColor, widget: string }
           - { label: Lang, name: lang, widget: string, default: en }
 
-  - name: 'pages'
-    label: 'Pages'
-    folder: 'app/content/pages'
-    create: true
-    slug: '{{slug}}'
-    format: 'json'
+  - label: Shop Page
+    name: 'shop'
+    format: json
+    file: 'app/content/settings/manifest.json'
     fields:
       - { label: Title, name: title, widget: string }
-      - { label: Subtitle, name: subtitle, widget: text, required: false }
       - { label: Content, name: content, widget: markdown }
       - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
-      - { label: 'SEO Description', name: seoDescription, widget: text, required: false }
-      - { label: 'SEO Meta Image', name: seoMetaImage, widget: image, required: false }
+
+  - label: About Page
+    name: 'about'
+    format: json
+    file: 'app/content/about.json'
+    fields:
+      - { label: Title, name: title, widget: string }
+      - { label: Content, name: content, widget: markdown }
+      - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
+    
+  - name: 'pages'
+  label: 'Product Pages'
+  folder: 'app/content/pages'
+  create: true
+  slug: '{{slug}}'
+  format: 'json'
+  fields:
+    - { label: Title, name: title, widget: string }
+    - { label: Subtitle, name: subtitle, widget: text, required: false }
+    - { label: Content, name: content, widget: markdown }
+    - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
+    - { label: 'SEO Description', name: seoDescription, widget: text, required: false }
+    - { label: 'SEO Meta Image', name: seoMetaImage, widget: image, required: false }
  
