--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -40,23 +40,23 @@ collections:
           - { label: 'Background color', name: backgroundColor, widget: string }
           - { label: Lang, name: lang, widget: string, default: en }
 
-  - label: Shop Page
-    name: 'shop'
-    format: json
-    file: 'app/content/settings/manifest.json'
-    fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Content, name: content, widget: markdown }
-      - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
+  - name: 'shop'
+  label: Shop Page
+  format: json
+  file: 'app/content/shop.json'
+  fields:
+    - { label: Title, name: title, widget: string }
+    - { label: Content, name: content, widget: markdown }
+    - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
 
-  - label: About Page
-    name: 'about'
-    format: json
-    file: 'app/content/about.json'
-    fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Content, name: content, widget: markdown }
-      - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
+  - name: 'about'
+  label: About Page
+  format: json
+  file: 'app/content/about.json'
+  fields:
+    - { label: Title, name: title, widget: string }
+    - { label: Content, name: content, widget: markdown }
+    - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
     
   - name: 'pages'
   label: 'Product Pages'
