--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 # Backend https://www.netlifycms.org/docs/configuration-options/#backend
 backend:
   name: git-gateway
-  branch: main
+  branch: master
 
 # Publish mode https://www.netlifycms.org/docs/configuration-options/#publish-mode
 publish_mode: editorial_workflow
