Main view layout

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -43,8 +43,67 @@ collections:
         format: json
         file: "/content/pages/index.json"
         fields:
-          - { label: Heading, name: heading, widget: string }
-          - { label: Subheading, name: subheading, widget: string }
+          - { label: Main Heading Text, name: mainHeading, widget: string }
+          - {
+              label: Main Subheading Text,
+              name: mainSubheading,
+              widget: string,
+            }
+          - { label: Main Section Image, name: mainSectionImage, widget: image }
+          - { label: Shop Heading, name: shopHeading, widget: string }
+          - { label: Shop Subheading, name: shopSubheading, widget: string }
+          - {
+              label: Shop Featured Item 1 Image,
+              name: shopFeatured1Image,
+              widget: image,
+            }
+          - {
+              label: Shop Featured Item 1 Title,
+              name: shopFeatured1Title,
+              widget: string,
+            }
+          - {
+              label: Shop Featured Item 1 Description,
+              name: shopFeatured1Description,
+              widget: string,
+            }
+          - {
+              label: Shop Featured Item 2 Image,
+              name: shopFeatured2Image,
+              widget: image,
+            }
+          - {
+              label: Shop Featured Item 2 Title,
+              name: shopFeatured2Title,
+              widget: string,
+            }
+          - {
+              label: Shop Featured Item 2 Description,
+              name: shopFeatured2Description,
+              widget: string,
+            }
+          - {
+              label: Shop Featured Item 3 Image,
+              name: shopFeatured3Image,
+              widget: image,
+            }
+          - {
+              label: Shop Featured Item 3 Title,
+              name: shopFeatured3Title,
+              widget: string,
+            }
+          - {
+              label: Shop Featured Item 3 Description,
+              name: shopFeatured3Description,
+              widget: string,
+            }
+          - { label: About Text, name: aboutText, widget: string }
+          - { label: About Image, name: aboutImage, widget: image }
+          - { label: About Image Alt, name: aboutImageAlt, widget: string }
+          - { label: Contact Heading, name: contactHeading, widget: string }
+          - { label: Contact Phone, name: contactPhone, widget: string }
+          - { label: Page SEO Title, name: meta.title, widget: string }
+          - { label: Page SEO Description, name: meta.content, widget: string }
 
       - name: "shop"
         label: Shop Page
@@ -52,6 +111,8 @@ collections:
         file: "/content/pages/shop.json"
         fields:
           - { label: Heading, name: heading, widget: string }
+          - { label: Page SEO Title, name: meta.title, widget: string }
+          - { label: Page SEO Description, name: meta.content, widget: string }
 
       - name: "about"
         label: About Page
@@ -59,3 +120,9 @@ collections:
         file: "/content/pages/about.json"
         fields:
           - { label: Heading, name: heading, widget: string }
+          - { label: subheading, name: subheading, widget: string }
+          - { label: aboutText, name: aboutText, widget: string }
+          - { label: aboutImage, name: aboutImage, widget: image }
+          - { label: aboutImageAlt, name: aboutImageAlt, widget: string }
+          - { label: Page SEO Title, name: meta.title, widget: string }
+          - { label: Page SEO Description, name: meta.content, widget: string }
