--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   accept_roles:
     - admin
     - editor
-    
+
 # Publish mode https://www.netlifycms.org/docs/configuration-options/#publish-mode
 publish_mode: editorial_workflow
 
@@ -130,19 +130,21 @@ collections:
           - { label: Page SEO Title, name: meta.title, widget: string }
           - { label: Page SEO Description, name: meta.content, widget: string }
 
-
-  - name: 'pens' # Used in routes, ie.: /admin/collections/:slug/edit
-      label: 'Pens' # Used in the UI
-      label_singular: 'Post' # Used in the UI, ie: "New Post"
-      folder: 'content/pens'
-      slug: '{{slug}}'
-      summary: '{{title}} -- {{subtitle}}'
-      create: true # Allow users to create new documents in this collection
-      fields: # The fields each document in this collection have
-        - { label: 'Title', name: 'title', widget: 'string'  }
-        - { label: 'Subtitle', name: 'subtitle', widget: 'string' }
-        - { label: mainImage, name: mainImage, widget: image }
-        - { label: mainImageAlt, name: mainImageAlt, widget: string }
-        - { label: "Body", name: "body", widget: "markdown" }
-        - { label: Page SEO Title, name: meta.title, widget: string }
-        - { label: Page SEO Description, name: meta.content, widget: string }
+  - label: "Pens"
+    name: "pens"
+    label_singular: "Pen"
+    folder: "content/pens"
+    slug: "{{slug}}"
+    summary: "{{title}} -- {{subtitle}}"
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - { label: Title, name: title, widget: string }
+      - { label: Subtitle, name: subtitle, widget: string }
+      - { label: Thumbnail, name: thumbnail, widget: string }
+      - { label: Etsy Link, name: etsyLink, widget: string }
+      - label: Images
+        name: images
+        widget: list
+        fields:
+          - { label: Image, name: image, widget: image }
+      - { label: "Description", name: "description", widget: "markdown" }
