--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -133,7 +133,7 @@ collections:
   - label: "Pens"
     name: "pens"
     label_singular: "Pen"
-    folder: "content/pens"
+    folder: "/content/pens"
     slug: "{{slug}}"
     summary: "{{title}} -- {{subtitle}}"
     create: true # Allow users to create new documents in this collection
